--- a/event/app/views/layouts/email_templates/dm_event_payment_reminder.html.erb
+++ b/event/app/views/layouts/email_templates/dm_event_payment_reminder.html.erb
@@ -1,17 +1,17 @@
 <%= markdown do %>
-<%= I18n.t('email.salutation', :value => h(@registration.full_name)) %>
+<%= I18n.t('email.salutation', :value => h(@values['fullname'])) %>
 
 <%= I18n.t('ems.ticket_registered_following_event') %>:
 
-**<%=h @registration.workshop.title %>**
+**<%=h @values['title'] %>**
 
 <%= I18n.t('ems.ticket_outstanding_balance') %>:
 
-**<%= @payment_owed %>**
+**<%= @values['payment_owed'] %>**
 
 <%= I18n.t('ems.ticket_payment_link_leadin' )%>:
 
-[<%= I18n.t('ems.ticket_payment_link_text') %>](<%= @payment_link %>)
+[<%= I18n.t('ems.ticket_payment_link_text') %>](<%= @values['payment_url'] %>)
 
 <%= I18n.t('ems.ticket_receipt_questions', :value => h(@registration.workshop.contact_email)) %>
 
