fix minor issue with czech translation

--- a/event/app/views/layouts/email_templates/dm_event_payment_reminder.html.erb
+++ b/event/app/views/layouts/email_templates/dm_event_payment_reminder.html.erb
@@ -3,7 +3,7 @@
 
 <%= I18n.t('ems.ticket_registered_following_event') %>:
 
-**<%=h @values['title'] %>**
+**<%=h @values['title'].strip %>**
 
 <%= I18n.t('ems.ticket_outstanding_balance') %>:
 
