--- a/cms/app/views/dm_cms/admin/media_files/index.html.erb
+++ b/cms/app/views/dm_cms/admin/media_files/index.html.erb
@@ -13,14 +13,14 @@
 
   <div class="tabbable">
     <ul class="nav nav-tabs">
-      <li class="active"><a href="#list_tab" data-toggle="tab">List</a></li>
-      <li><a href="#grid_tab" data-toggle="tab">Grid</a></li>
+      <li class="active"><a href="#grid_tab" data-toggle="tab">Grid</a></li>
+      <li><a href="#list_tab" data-toggle="tab">List</a></li>
     </ul>
 
     <div class="tab-content with-padding">
 
       <%#--- List Tab %>
-      <div class="tab-pane fade in active" id="list_tab">
+      <div class="tab-pane fade" id="list_tab">
         <table class="table table-bordered table-hover">
           <tbody>
             <% @media_files.each do |media_file| %>
@@ -56,7 +56,7 @@
       </div>
 
       <%#--- Grid Tab %>
-      <div class="tab-pane fade" id="grid_tab">
+      <div class="tab-pane fade in active" id="grid_tab">
         <% @media_files.each_slice(4) do |media_chunk| %>
           <div class="row">
             <% media_chunk.each do |media_file| %>
@@ -84,7 +84,6 @@
             <% end %>
           </div>
         <% end %>
-
       </div>
     </div>
 
