remove use of Preference class in DmEvent (for performance reasons)

--- a/event/app/views/dm_event/admin/workshops/_form.html.erb
+++ b/event/app/views/dm_event/admin/workshops/_form.html.erb
@@ -76,7 +76,7 @@
           <hr>
         <% end %>
         <%= f.input :image, label: 'Workshop Image', id: 'image_error', hint: 'Image used as a banner to the registration page.  Also used for Facebook.' %>
-        <%= f.input :preferred_header_accent_color, as: :color_picker, label: 'Accent Color', hint: 'Accent color used in header (if supported by theme). Any valid CSS color' %>
+        <%= f.input :header_accent_color, as: :color_picker, label: 'Accent Color', hint: 'Accent color used in header (if supported by theme). Any valid CSS color' %>
       <% end %>
     </div>
   </div>
