--- a/core/app/views/dm_core/admin/users/index.html.erb
+++ b/core/app/views/dm_core/admin/users/index.html.erb
@@ -1,13 +1,20 @@
 <% content_for :content_title_extra do %>
   <%= page_header_buttons do %>
-    <div class="header-bar-stats">
-      <ul class="page-stats">
-        <li><%= render partial: 'dm_core/admin/shared/header_stats_new_users' %></li>
-        <li><%= render partial: 'dm_core/admin/shared/header_stats_user_activity' %></li>
+    <div class="btn-group">
+      <button class="btn btn-default btn-sm dropdown-toggle" data-toggle="dropdown"><%= icons(:gear) %> <span class="caret"></span></button>
+      <ul class="dropdown-menu dropdown-menu-right icons-right">
+        <li><%= link_to icon_label('fa fa-download fa-fw', 'Export Users (.csv)'), admin_users_url(format: 'csv') %></li>
+        <li><%= link_to icon_label('fa fa-download fa-fw', 'Export Users (.xls)'), admin_users_url(format: 'xls') %></li>
       </ul>
     </div>
   <% end %>
 <% end %>
+<div class="header-bar-stats">
+  <ul class="page-stats text-center">
+    <li><%= render partial: 'dm_core/admin/shared/header_stats_new_users' %></li>
+    <li><%= render partial: 'dm_core/admin/shared/header_stats_user_activity' %></li>
+  </ul>
+</div>
 <%= panel title: icon_label(:users, 'Users'), body: true do %>
   <div class="datatable">
     <table id="user_table" class="table table-striped table-bordered" data-source="<%= dm_core.admin_users_url %>">
