--- a/core/app/views/dm_core/admin/users/edit.html.erb
+++ b/core/app/views/dm_core/admin/users/edit.html.erb
@@ -144,10 +144,10 @@
                   <%= p.input :first_name, label: I18n.t('core.profile_first_name', locale: :en), required: true %>
                   <%= p.input :last_name, label: I18n.t('core.profile_last_name', locale: :en), required: true %>
                 <% end %>
-                <%= f.input :email, disabled: disable_fields, hint: 'Note: If you change the email address, a confirmation email will be sent to the new address. The email 
+                <%= f.input :email, disabled: disable_fields, hint: 'Note: If you change the email address, a confirmation email will be sent to the new address. The email
                 address will look unchanged until it is confirmed' %>
-                <%= f.input(:unconfirmed_email, disabled: true, 
-                     hint: "The user needs to re-confirm this email address - an email has already been sent.<br> 
+                <%= f.input(:unconfirmed_email, disabled: true,
+                     hint: "The user needs to re-confirm this email address - an email has already been sent.<br>
                       #{link_to 'Resend Confirmation Email', dm_core.resend_confirmation_email_admin_user_path(@user.id), method: :patch} or #{link_to 'Cancel Change of Email', dm_core.cancel_change_of_email_admin_user_path(@user.id), method: :patch}".html_safe) if @user.pending_reconfirmation? %>
 
                 <hr>
@@ -184,7 +184,7 @@
                     <%= f.input('roles[content_manager]',         as: :boolean, inline_label: 'Content Manager', input_html: {checked: @user.has_role?(:content_manager)}, hint: 'can manage blog and static pages') if defined?(DmCms) %>
                     <%= f.input('roles[content_manager_alacarte]',as: :boolean, inline_label: 'Individual Content Management', input_html: {checked: @user.has_role?(:content_manager_alacarte)}, hint: 'grant access to specific pages/blogs only') if defined?(DmCms) %>
                     <%= f.input('roles[event_manager]',           as: :boolean, inline_label: 'Event Manager', input_html: {checked: @user.has_role?(:event_manager)}, hint: 'can manage events and workshops') if defined?(DmEvent) %>
-                    <%= f.input('roles[event_manager_alacarte]',  as: :boolean, inline_label: 'Individual Event Management', input_html: {checked: @user.has_role?(:event_manager_alacarte)}, hint: 'grant access to specific events only') if defined?(DmEvent) %>
+                    <%= f.input('roles[event_manager_alacarte]',  as: :boolean, inline_label: 'Individual Event Management', input_html: {checked: @user.has_role?(:event_manager_alacarte)}, hint: 'grant access to specific events only.  Use the "Permissions" page in an event to grant access') if defined?(DmEvent) %>
                     <%= f.input('roles[forum_manager]',           as: :boolean, inline_label: 'Forum Manager', input_html: {checked: @user.has_role?(:forum_manager)}, hint: 'can manage forums') if defined?(DmForum) %>
                     <%= f.input('roles[course_manager]',          as: :boolean, inline_label: 'Course Manager', input_html: {checked: @user.has_role?(:course_manager)}, hint: 'can manage courses and lessons') if defined?(DmLms) %>
                     <%= f.input('roles[subscription_manager]',    as: :boolean, inline_label: 'Subscription Manager', input_html: {checked: @user.has_role?(:course_manager)}, hint: 'can manage site subscriptions') if defined?(DmSubscriptions) %>
@@ -196,22 +196,6 @@
                     <% end %>
                     <%= submit_or_cancel :cancel_url => dm_core.admin_users_url %>
                   <% end %>
-                <% end %>
-              <% end %>
-
-              <% if defined?(DmEvent) %>
-                <%= subsection title: 'Event Permissions' do %>
-                  <form>
-                    <div class="form-group">
-                      <label for="exampleInputEmail1">Select a Current Workshop</label>
-                      <select class="form-control">
-                        <% Workshop.upcoming.each do |workshop| %>
-                          <option><%= workshop.title %></option>
-                        <% end %>
-                      </select>
-                    </div>
-                    <button type="submit" class="btn btn-default">Grant Access</button>
-                  </form>              
                 <% end %>
               <% end %>
             </div>
