fix path for payment partial

--- a/event/app/views/dm_event/registrations/choose_payment.html.erb
+++ b/event/app/views/dm_event/registrations/choose_payment.html.erb
@@ -1,5 +1,5 @@
 <h2><%= I18n.t('ems.choose_payment_method') %></h2>
 
 <div class="payment_choice">
-  <%= render partial: 'payment_paypal_standard' %>
+  <%= render partial: 'dm_event/payments/registrations_paypal_standard' %>
 </div>
