--- a/event/app/views/dm_event/admin/workshops/_form.html.erb
+++ b/event/app/views/dm_event/admin/workshops/_form.html.erb
@@ -60,6 +60,7 @@
         <%= f.input :published, as: :boolean, inline_label: 'Publish It?', hint: 'Make available for registrations' %>
         <%= f.input :starting_on, label: 'Starting on', as: :datetime_picker, required: true, input_wrapper_html: {class: 'col-sm-4'}, hint: format_datetime(@workshop.starting_on, full_date: true) %>
         <%= f.input :ending_on, label: 'Ending on', as: :datetime_picker, required: true, input_wrapper_html: {class: 'col-sm-4'}, hint: format_datetime(@workshop.ending_on, full_date: true) %>
+        <%= f.input :hide_dates, as: :boolean, inline_label: 'Hide Registration Dates', hint: 'The dates will not be shown on the registration page' %>
         <%= f.input :deadline_on, label: 'Deadline', as: :date_picker, input_wrapper_html: {class: 'col-sm-4'}, hint: format_date(@workshop.deadline_on, full_date: true) %>
         <%= f.input :initial_payment_required_on, label: 'Initial Payment Expected By', as: :date_picker, input_wrapper_html: {class: 'col-sm-4'},
                     hint: @workshop.initial_payment_required_on ? format_date(@workshop.initial_payment_required_on, full_date: true) : 'Leave blank to expect initial payment on date of registration' %>
